--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc && node dist/server.js",
-    "dev": "tsc && concurrently \"tsc -w\" \"nodemon dist/server.js\"",
+    "start:dev": "tsc && concurrently \"tsc -w\" \"nodemon dist/server.js\"",
+    "start:prod": "SET NODE_ENV=production && npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
