--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "tsc && node dist/server.js",
     "start:dev": "tsc && concurrently \"tsc -w\" \"node --watch dist/server.js\"",
     "start:prod": "SET NODE_ENV=production && npm start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "typeorm": "typeorm-ts-node-commonjs -d ./src/config/data.source.ts",
+    "m:gen": "npm run typeorm migration:generate",
+    "m:run": "npm run typeorm migration:run"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +31,7 @@
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.5",
-    "concurrently": "^8.2.1"
+    "concurrently": "^8.2.1",
+    "ts-node": "^10.9.1"
   }
 }
