--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc && node dist/server.js",
-    "start:dev": "tsc && concurrently \"tsc -w\" \"node --watch dist/server.js\"",
+    "start:dev": "tsc && concurrently \"tsc -w\" \"nodemon dist/server.js\"",
     "start:prod": "SET NODE_ENV=production && npm start",
     "test": "echo \"Error: no test specified\" && exit 1",
     "typeorm": "typeorm-ts-node-commonjs -d ./src/config/data.source.ts",
@@ -33,6 +33,7 @@
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.5",
     "concurrently": "^8.2.1",
+    "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
   }
 }
