--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "typeorm": "^0.3.17",
     "typeorm-naming-strategies": "^4.1.0",
     "typescript": "^5.2.2"
@@ -31,7 +35,11 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/morgan": "^1.9.5",
+    "@types/passport": "^1.0.13",
+    "@types/passport-jwt": "^3.0.10",
+    "@types/passport-local": "^1.0.36",
     "concurrently": "^8.2.1",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
